@@ -1,227 +1,247 @@
 <oaf_info>
 
-<oaf_server iid="OAFIID:GNOME_Evolution_Mail_ControlFactory"
-            type="exe"
-            location="evolution-mail">
+  <!-- Folder display control -->
 
-	<oaf_attribute name="repo_ids" type="stringv">
-		<item value="IDL:GNOME/ObjectFactory:1.0"/>
-	</oaf_attribute>
+  <!-- (control) -->
+  <oaf_server iid="OAFIID:GNOME_Evolution_Mail_Control"
+	      type="factory"
+	      location="OAFIID:GNOME_Evolution_Mail_ControlFactory">
 
-	<oaf_attribute name="description" type="string"
-                       _value="Evolution mail folder factory component."/>
-</oaf_server>
+    <oaf_attribute name="repo_ids" type="stringv">
+      <item value="IDL:BonoboControl/evolution-mail:1.0"/>
+      <item value="IDL:GNOME/Control:1.0"/>
+    </oaf_attribute>
 
-<oaf_server iid="OAFIID:GNOME_Evolution_Mail_Control"
-            type="factory"
-            location="OAFIID:GNOME_Evolution_Mail_ControlFactory">
+    <oaf_attribute name="description" type="string"
+		   _value="Evolution mail folder display component."/>
+  </oaf_server>
 
-	<oaf_attribute name="repo_ids" type="stringv">
-		<item value="IDL:BonoboControl/evolution-mail:1.0"/>
-		<item value="IDL:GNOME/Control:1.0"/>
-	</oaf_attribute>
+  <!-- (factory) -->
+  <oaf_server iid="OAFIID:GNOME_Evolution_Mail_ControlFactory"
+	      type="exe"
+	      location="evolution-mail">
 
-	<oaf_attribute name="description" type="string"
-                       _value="Evolution mail folder display component."/>
-</oaf_server>
+    <oaf_attribute name="repo_ids" type="stringv">
+      <item value="IDL:GNOME/ObjectFactory:1.0"/>
+    </oaf_attribute>
 
-<oaf_server iid="OAFIID:GNOME_Evolution_Mail_ShellComponent"
-            type="exe"
-            location="evolution-mail">
+    <oaf_attribute name="description" type="string"
+		   _value="Evolution mail folder factory component."/>
+  </oaf_server>
 
-	<oaf_attribute name="repo_ids" type="stringv">
-		<item value="IDL:GNOME/Evolution/ShellComponent:1.0"/>
-	</oaf_attribute>
+  <!-- Shell Component -->
 
-	<oaf_attribute name="description" type="string"
-	               _value="Evolution component for handling mail."/>
+  <oaf_server iid="OAFIID:GNOME_Evolution_Mail_ShellComponent"
+	      type="exe"
+	      location="evolution-mail">
 
-	<oaf_attribute name="evolution:shell-component-icon" type="string"
-		       value="evolution-inbox.png"/>
-</oaf_server>
+    <oaf_attribute name="repo_ids" type="stringv">
+      <item value="IDL:GNOME/Evolution/ShellComponent:1.0"/>
+    </oaf_attribute>
 
-<oaf_server iid="OAFIID:GNOME_Evolution_Mail_ExecutiveSummaryComponentFactory"
-	    type="exe"
-	    location="evolution-mail">
+    <oaf_attribute name="description" type="string"
+		   _value="Evolution component for handling mail."/>
 
-	<oaf_attribute name="repo_ids" type="stringv">
-		<item value="IDL:Bonobo/Unknown:1.0"/>
-	</oaf_attribute>
+    <oaf_attribute name="evolution:shell-component-icon" type="string"
+		   value="evolution-inbox.png"/>
+  </oaf_server>
 
-	<oaf_attribute name="description" type="string"
-		       _value="Factory for the Mail Summary component."/>
-</oaf_server>
+  <!-- Summary component, for showing info in the summary -->
 
-<oaf_server iid="OAFIID:GNOME_Evolution_Mail_ExecutiveSummaryComponent"
-	    type="factory"
-	    location="OAFIID:GNOME_Evolution_Mail_ExecutiveSummaryComponentFactory">
+  <oaf_server iid="OAFIID:GNOME_Evolution_Mail_ExecutiveSummaryComponentFactory"
+	      type="exe"
+	      location="evolution-mail">
 
-	<oaf_attribute name="repo_ids" type="stringv">
-		<item value="IDL:GNOME/Evolution:Summary:ComponentFactory:1.0"/>
-	</oaf_attribute>
+    <oaf_attribute name="repo_ids" type="stringv">
+      <item value="IDL:Bonobo/Unknown:1.0"/>
+    </oaf_attribute>
 
-	<oaf_attribute name="description" type="string"
-		       _value="Evolution mail executive summary component."/>
-</oaf_server>
+    <oaf_attribute name="description" type="string"
+		   _value="Factory for the Mail Summary component."/>
+  </oaf_server>
 
-<oaf_server iid="OAFIID:GNOME_Evolution_Mail_ComposerFactory"
-	    type="exe"
-	    location="evolution-mail">
+  <oaf_server iid="OAFIID:GNOME_Evolution_Mail_ExecutiveSummaryComponent"
+	      type="factory"
+	      location="OAFIID:GNOME_Evolution_Mail_ExecutiveSummaryComponentFactory">
 
-	<oaf_attribute name="repo_ids" type="stringv">
-		<item value="IDL:GNOME:GenericFactory:1.0"/>
-	</oaf_attribute>
+    <oaf_attribute name="repo_ids" type="stringv">
+      <item value="IDL:GNOME/Evolution:Summary:ComponentFactory:1.0"/>
+    </oaf_attribute>
 
-	<oaf_attribute name="description" type="string"
-		       _value="Factory for the Evolution composer."/>
-</oaf_server>
+    <oaf_attribute name="description" type="string"
+		   _value="Evolution mail executive summary component."/>
+  </oaf_server>
 
-<oaf_server iid="OAFIID:GNOME_Evolution_Mail_Composer"
-	    type="factory"
-	    location="OAFIID:GNOME_Evolution_Mail_ComposerFactory">
+  <!-- Message composer -->
 
-	<oaf_attribute name="repo_ids" type="stringv">
-		<item value="IDL:GNOME/Evolution:Composer:1.0"/>
-		<item value="IDL:Bonobo/ItemContainer:1.0"/>
-	</oaf_attribute>
+  <!-- (factory) -->
+  <oaf_server iid="OAFIID:GNOME_Evolution_Mail_ComposerFactory"
+	      type="exe"
+	      location="evolution-mail">
 
-	<oaf_attribute name="description" type="string"
-		       _value="Evolution mail composer."/>
-</oaf_server>
+    <oaf_attribute name="repo_ids" type="stringv">
+      <item value="IDL:GNOME/GenericFactory:1.0"/>
+    </oaf_attribute>
 
-<oaf_server iid="OAFIID:GNOME_Evolution_MailConfig_Factory"
-	    type="exe"
-	    location="evolution-mail">
+    <oaf_attribute name="description" type="string"
+		   _value="Factory for the Evolution composer."/>
+  </oaf_server>
 
-	<oaf_attribute name="repo_ids" type="stringv">
-		<item value="IDL:GNOME/GenericFactory:1.0"/>
-	</oaf_attribute>
-</oaf_server>
+  <!-- (composer) -->
+  <oaf_server iid="OAFIID:GNOME_Evolution_Mail_Composer"
+	      type="factory"
+	      location="OAFIID:GNOME_Evolution_Mail_ComposerFactory">
 
-<oaf_server iid="OAFIID:GNOME_Evolution_MailConfig"
-	    type="factory"
-	    location="OAFIID:GNOME_Evolution_MailConfig_Factory">
+    <oaf_attribute name="repo_ids" type="stringv">
+      <item value="IDL:GNOME/Evolution:Composer:1.0"/>
+      <item value="IDL:Bonobo/ItemContainer:1.0"/>
+    </oaf_attribute>
 
-	<oaf_attribute name="repo_ids" type="stringv">
-		<item value="IDL:GNOME/Evolution/MailConfig:1.0"/>
-	</oaf_attribute>
+    <oaf_attribute name="description" type="string"
+		   _value="Evolution mail composer."/>
+  </oaf_server>
 
-	<oaf_attribute name="description" type="string"
-		       _value="Mail configuration interface"/>
-</oaf_server>
+  <!-- MailConfig interface -->
 
-<oaf_server iid="OAFIID:GNOME_Evolution_FolderInfo_Factory"
-	    type="exe"
-	    location="evolution-mail">
+  <!-- (factory) -->
+  <oaf_server iid="OAFIID:GNOME_Evolution_MailConfig_Factory"
+	      type="exe"
+	      location="evolution-mail">
 
-	<oaf_attribute name="repo_ids" type="stringv">
-		<item value="IDL:GNOME/GenericFactory:1.0"/>
-	</oaf_attribute>
-</oaf_server>
+    <oaf_attribute name="repo_ids" type="stringv">
+      <item value="IDL:GNOME/GenericFactory:1.0"/>
+    </oaf_attribute>
+  </oaf_server>
 
-<oaf_server iid="OAFIID:GNOME_Evolution_FolderInfo"
-	    type="factory"
-	    location="OAFIID:GNOME_Evolution_FolderInfo_Factory">
+  <!-- (interface) -->
+  <oaf_server iid="OAFIID:GNOME_Evolution_MailConfig"
+	      type="factory"
+	      location="OAFIID:GNOME_Evolution_MailConfig_Factory">
 
-	<oaf_attribute name="repo_ids" type="stringv">
-		<item value="IDL:GNOME/Evolution/FolderInfo:1.0"/>
-	</oaf_attribute>
-</oaf_server>
+    <oaf_attribute name="repo_ids" type="stringv">
+      <item value="IDL:GNOME/Evolution/MailConfig:1.0"/>
+    </oaf_attribute>
 
-<oaf_server iid="OAFIID:GNOME_Evolution_Mail_Wizard_Factory"
-	    type="exe"
-	    location="evolution-mail">
-</oaf_server>
+    <oaf_attribute name="description" type="string"
+		   _value="Mail configuration interface"/>
+  </oaf_server>
 
-<oaf_server iid="OAFIID:GNOME_Evolution_Mail_Wizard"
-	    type="factory"
-	    location="OAFIID:GNOME_Evolution_Mail_Wizard_Factory">
-</oaf_server>
+  <!-- FolderInfo interface -->
+
+  <!-- (factory) -->
+  <oaf_server iid="OAFIID:GNOME_Evolution_FolderInfo_Factory"
+	      type="exe"
+	      location="evolution-mail">
+
+    <oaf_attribute name="repo_ids" type="stringv">
+      <item value="IDL:GNOME/GenericFactory:1.0"/>
+    </oaf_attribute>
+  </oaf_server>
+
+  <!-- (interface) -->
+  <oaf_server iid="OAFIID:GNOME_Evolution_FolderInfo"
+	      type="factory"
+	      location="OAFIID:GNOME_Evolution_FolderInfo_Factory">
+
+    <oaf_attribute name="repo_ids" type="stringv">
+      <item value="IDL:GNOME/Evolution/FolderInfo:1.0"/>
+    </oaf_attribute>
+  </oaf_server>
+
+  <!-- Startup Wizard -->
+
+  <!-- (factory) -->
+  <oaf_server iid="OAFIID:GNOME_Evolution_Mail_Wizard_Factory"
+	      type="exe"
+	      location="evolution-mail">
+  </oaf_server>
+
+  <!-- (wizard) -->
+  <oaf_server iid="OAFIID:GNOME_Evolution_Mail_Wizard"
+	      type="factory"
+	      location="OAFIID:GNOME_Evolution_Mail_Wizard_Factory">
+  </oaf_server>
 
 
+  <!-- Configuration pages -->
 
-<oaf_server iid="OAFIID:GNOME_Evolution_Mail_ConfigControlFactory"
-            type="exe"
-            location="evolution-mail">
+  <!-- (factory) -->
+  <oaf_server iid="OAFIID:GNOME_Evolution_Mail_ConfigControlFactory"
+	      type="exe"
+	      location="evolution-mail">
 
-	<oaf_attribute name="repo_ids" type="stringv">
-		<item value="IDL:GNOME/Evolution/ConfigControl:1.0"/>
-	</oaf_attribute>
+    <oaf_attribute name="repo_ids" type="stringv">
+      <item value="IDL:GNOME/GenericFactory:1.0"/>
+    </oaf_attribute>
+  </oaf_server>
 
-	<oaf_attribute name="evolution:config_item:title" type="string"
-		       _value="Mail Settings"/>
+  <!-- Account Editor -->
+  <oaf_server iid="OAFIID:GNOME_Evolution_Mail_Accounts_ConfigControl"
+	      type="factory"
+	      location="OAFIID:GNOME_Evolution_Mail_ConfigControlFactory">
 
-	<oaf_attribute name="evolution:config_item:description" type="string"
-		       _value="This page can be used to configure your mailer settings"/>
+    <oaf_attribute name="repo_ids" type="stringv">
+      <item value="IDL:GNOME/Evolution/ConfigControl:1.0"/>
+    </oaf_attribute>
 
-	<oaf_attribute name="evolution:config_item:icon_name" type="string"
-		       value="evolution-mail-settings.png"/>
-</oaf_server>
+    <oaf_attribute name="evolution:config_item:title" type="string"
+		   _value="Mail Accounts"/>
 
-<oaf_server iid="OAFIID:GNOME_Evolution_Mail_Accounts_ConfigControl"
-            type="factory"
-	    location="OAFIID:GNOME_Evolution_Mail_ConfigControlFactory">
+    <oaf_attribute name="evolution:config_item:description" type="string"
+		   _value="This page can be used to configure E-Mail Accounts"/>
 
-	<oaf_attribute name="repo_ids" type="stringv">
-		<item value="IDL:GNOME/Evolution/ConfigControl:1.0"/>
-	</oaf_attribute>
-
-	<oaf_attribute name="evolution:config_item:title" type="string"
-		       _value="Mail Accounts"/>
-
-	<oaf_attribute name="evolution:config_item:description" type="string"
-		       _value="This page can be used to configure E-Mail Accounts"/>
-
-	<oaf_attribute name="evolution:config_item:icon_name" type="string"
-		       value="evolution-mail-accounts.png"/>
+    <oaf_attribute name="evolution:config_item:icon_name" type="string"
+		   value="evolution-mail-accounts.png"/>
     
-	<oaf_attribute name="description" type="string"
-		       _value="Configuration control for the Evolution Mail Accounts."/>
+    <oaf_attribute name="description" type="string"
+		   _value="Configuration control for the Evolution Mail Accounts."/>
 
-</oaf_server>
+  </oaf_server>
 
-<oaf_server iid="OAFIID:GNOME_Evolution_Mail_Preferences_ConfigControl"
-            type="factory"
-	    location="OAFIID:GNOME_Evolution_Mail_ConfigControlFactory">
+  <!-- Mail Preferences -->
+  <oaf_server iid="OAFIID:GNOME_Evolution_Mail_Preferences_ConfigControl"
+	      type="factory"
+	      location="OAFIID:GNOME_Evolution_Mail_ConfigControlFactory">
 
-	<oaf_attribute name="repo_ids" type="stringv">
-		<item value="IDL:GNOME/Evolution/ConfigControl:1.0"/>
-	</oaf_attribute>
+    <oaf_attribute name="repo_ids" type="stringv">
+      <item value="IDL:GNOME/Evolution/ConfigControl:1.0"/>
+    </oaf_attribute>
 
-	<oaf_attribute name="evolution:config_item:title" type="string"
-		       _value="Mail Preferences"/>
+    <oaf_attribute name="evolution:config_item:title" type="string"
+		   _value="Mail Preferences"/>
 
-	<oaf_attribute name="evolution:config_item:description" type="string"
-		       _value="This page can be used to configure Mailer preferences"/>
+    <oaf_attribute name="evolution:config_item:description" type="string"
+		   _value="This page can be used to configure Mailer preferences"/>
 
-	<oaf_attribute name="evolution:config_item:icon_name" type="string"
-		       value="evolution-mail-preferences.png"/>
+    <oaf_attribute name="evolution:config_item:icon_name" type="string"
+		   value="evolution-mail-preferences.png"/>
     
-	<oaf_attribute name="description" type="string"
-		       _value="Configuration control for the Evolution Mailer."/>
+    <oaf_attribute name="description" type="string"
+		   _value="Configuration control for the Evolution Mailer."/>
 
-</oaf_server>
+  </oaf_server>
 
-<oaf_server iid="OAFIID:GNOME_Evolution_Mail_ComposerPrefs_ConfigControl"
-            type="factory"
-	    location="OAFIID:GNOME_Evolution_Mail_ConfigControlFactory">
+  <!-- Composer Preferences -->
+  <oaf_server iid="OAFIID:GNOME_Evolution_Mail_ComposerPrefs_ConfigControl"
+	      type="factory"
+	      location="OAFIID:GNOME_Evolution_Mail_ConfigControlFactory">
 
-	<oaf_attribute name="repo_ids" type="stringv">
-		<item value="IDL:GNOME/Evolution/ConfigControl:1.0"/>
-	</oaf_attribute>
+    <oaf_attribute name="repo_ids" type="stringv">
+      <item value="IDL:GNOME/Evolution/ConfigControl:1.0"/>
+    </oaf_attribute>
 
-	<oaf_attribute name="evolution:config_item:title" type="string"
-		       _value="Composer Preferences"/>
+    <oaf_attribute name="evolution:config_item:title" type="string"
+		   _value="Composer Preferences"/>
 
-	<oaf_attribute name="evolution:config_item:description" type="string"
-		       _value="This page can be used to configure the Composer"/>
+    <oaf_attribute name="evolution:config_item:description" type="string"
+		   _value="This page can be used to configure the Composer"/>
 
-	<oaf_attribute name="evolution:config_item:icon_name" type="string"
-		       value="evolution-composer-preferences.png"/>
+    <oaf_attribute name="evolution:config_item:icon_name" type="string"
+		   value="evolution-composer-preferences.png"/>
     
-	<oaf_attribute name="description" type="string"
-		       _value="Configuration control for the Evolution Message Composer."/>
+    <oaf_attribute name="description" type="string"
+		   _value="Configuration control for the Evolution Message Composer."/>
 
-</oaf_server>
+  </oaf_server>
 
 </oaf_info>
